--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,16 @@
     <modules>
         <module>application</module>
         <module>core</module>
+        <module>rest</module>
     </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mockito.version>1.10.19</mockito.version>
+        <springdoc.version>2.0.0</springdoc.version>
+        <commons-io.version>2.11.0</commons-io.version>
+<!--        <mockito.version>1.10.19</mockito.version>-->
     </properties>
 
     <dependencies>
@@ -57,6 +60,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
