--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8083
 
 server.servlet.contextPath=/backend
 
-spring.datasource.url=jdbc:postgresql://localhost:25432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/items
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8383/realms/Heritage
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Heritage
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 jwt.auth.converter.resource-id=itemy_backend
@@ -23,3 +23,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 logging.level.org.springframework.security=DEBUG
+management.endpoints.web.exposure.include=httptrace
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+# producer config
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
