--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8083
 
 server.servlet.contextPath=/backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/items
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:25432/itemy
+spring.datasource.username=admin1
+spring.datasource.password=pass1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Heritage
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/realmItem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 jwt.auth.converter.resource-id=itemy_backend
@@ -20,7 +20,7 @@ app.cors.allowed-origins=*
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:changelog/db.changelog-master.xml
 
 logging.level.org.springframework.security=DEBUG
 management.endpoints.web.exposure.include=httptrace
