added docker image

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8083
 
 server.servlet.contextPath=/backend
 
-spring.datasource.url=jdbc:postgresql://localhost:25432/itemy
+spring.datasource.url=jdbc:postgresql://itemy.postgres:5432/itemy
 spring.datasource.username=admin1
 spring.datasource.password=pass1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/realmItem
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://itemy.keycloak:8080/realms/realmItem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 jwt.auth.converter.resource-id=itemy_backend
