--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.level.org.springframework.security=DEBUG
 management.endpoints.web.exposure.include=httptrace
 
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 # producer config
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
