--- a/application/pom.xml
+++ b/application/pom.xml
@@ -51,7 +51,11 @@
             <artifactId>spring-boot-actuator</artifactId>
             <version>2.7.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
