--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,15 +4,17 @@ server.port=8083
 
 server.servlet.contextPath=/backend
 
-spring.datasource.url=jdbc:postgresql://itemy.postgres:5432/itemy
+#spring.datasource.url=jdbc:postgresql://itemy.postgres:5432/itemy
+spring.datasource.url=jdbc:postgresql://localhost:25432/itemy
 spring.datasource.username=admin1
 spring.datasource.password=pass1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://itemy.keycloak:8080/realms/realmItem
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://itemy.keycloak:8080/realms/realmItem
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/realmItem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
-jwt.auth.converter.resource-id=itemy_backend
+jwt.auth.converter.resource-id=itemy-backend
 jwt.auth.converter.principal-attribute=preferred_username
 
 app.cors.allowed-origins=*
@@ -23,11 +25,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:changelog/db.changelog-master.xml
 
 logging.level.org.springframework.security=DEBUG
-management.endpoints.web.exposure.include=httptrace
 
 
-spring.kafka.bootstrap-servers=kafka:9092
 # producer config
+spring.kafka.bootstrap-servers=broker:9092
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
