--- a/application/src/main/resources/application-dev.properties
+++ b/application/src/main/resources/application-dev.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/realmItem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+
+spring.kafka.bootstrap-servers=localhost:9092
