--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: itemy.keycloak
     image: quay.io/keycloak/keycloak:20.0
     environment:
-      KC_HOSTNAME: localhost
+      KC_HOSTNAME: itemy.keycloak
       KC_DB_URL: jdbc:postgresql://itemy.postgres/keycloak
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
@@ -49,6 +49,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "22181:2181"
+    networks:
+      - itemy
 
   broker:
     image: confluentinc/cp-kafka:latest
@@ -62,26 +64,27 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    networks:
+      - itemy
 
-
-#  itemy.application:
-#    container_name: itemy.application
-##    build:
-##      context: itemy.application
-##      dockerfile: Dockerfile
-#    image: application:latest
-#    ports:
-#      - 8083:8083
-#    depends_on:
-#      - itemy.postgres
-#      - itemy.keycloak
-#      - broker
-#    networks:
-#      - itemy
+  itemy.application:
+    container_name: itemy.application
+#    build:
+#      context: itemy.application
+#      dockerfile: Dockerfile
+    image: application:latest
+    ports:
+      - 8083:8083
+    depends_on:
+      - itemy.postgres
+      - itemy.keycloak
+      - broker
+    networks:
+      - itemy
 
 networks:
   itemy:
